--- a/angular-client/src/assets/i18n/en.json
+++ b/angular-client/src/assets/i18n/en.json
@@ -1,57 +1,143 @@
 {
     "ActiveCaseFile": {
-        "TranslationSections": "Hello World"
+        "Active": "Active Case Files",
+        "Not Active":  "No active case files to display",
+        "Last": "Last update:",
+        "Priority": "Priority:",
+        "Created": "Created by:",
+        "LastUpdated": "Last updated by:"
     },
      "CaseModal": {
-        "TranslationSections": ""
+        "New": "New Case",
+        "Participant":"Participant:",
+        "Urgency":"Select urgency of request",
+        "Resources":"Select the resources for this case",
+        "Submit":"Submit",
+        "Cancel":"Cancel"
     },
       "CaseFiles": {
-        "TranslationSections": ""
+        "Cases": "Cases",
+        "NoCases":"No cases to display.",
+        "Status":"Status:",
+        "Urgency":"Urgency:",
+        "Type":"Type:",
+        "Notes":"Notes:",
+        "Name":"Name:",
+        "Contacted":"Contacted:",
+        "Date":"Date:",
+        "Comment":"Comment:",
+        "Yes":"Yes:",
+        "No":"No:",
+        "SelectedResource":"Selected Resource:",
+        "Nothing":"Nothing selected",
+        "Clear":"clear",
+        "Save":"save",
+        "Delete":"delete"
     },
       "Activity": {
-        "TranslationSections": ""
+        "Recent": "Recent Case File Activity",
+        "Participant": "Participant:",
+        "Last": "Last update:",
+        "NoRecent":"No recent activity",
+        "RecentPhone":"Recent Phone Log Activity"
     },
       "DashBoard": {
         "TranslationSections": ""
     },
       "DocumentModal": {
-        "TranslationSections": ""
+        "AddDocument": "Add a Document",
+        "Upload": "Upload Document",
+        "Submit": "Submit",
+        "Close": "Close"
     },
       "Documents": {
-        "TranslationSections": ""
+        "Documents": "Documents",
+        "NoDocs": "No documents to display.",
+        "Attachments": "Attachments:",
+        "Delete": "Delete"
     },
       "Login": {
-        "TranslationSections": ""
+        "Login": "Login",
+        "Email": "Email",
+        "Password": "Password",
+        "Submit": "Submit"
     },
-      "messages": {
-        "TranslationSections": ""
+      "Messages": {
+        "Messages": "Messages:",
+        "Clear":"Clear"
     },
       "AlertModal": {
-        "TranslationSections": ""
+        "Ok": "OK"
     },
       "ConfirmModal": {
-        "TranslationSections": ""
+        "Confirmation": "Confirmation",
+        "Ok":"Ok",
+        "Cancel":"Cancel"
     },
       "Notes": {
-        "TranslationSections": ""
+        "Notes": "Notes",
+        "No": "No notes to display.",
+        "Note":"Note:",
+        "Attachment":"Attachment:"
     },
       "NoteModal": {
-        "TranslationSections": ""
+        "Create": "Create a Note",
+        "Upload": "Upload File",
+        "Cancel": "Cancel"
     },
       "Participants": {
-        "TranslationSections": ""
     },
       "AddParticipant": {
-        "TranslationSections": ""
+        "Legal": "Do not use participant's legal name",
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "Telephone": "Telephone",
+        "SocialMedia": "Social media provider (Twitter, Facebook)",
+        "SocialMediaAccount": "Social media account (@username)",
+        "Email address": "Email address",
+        "Warning": "This is already associated to a participant!",
+        "Address": "Physical Address",
+        "Optional": "This is strictly optional",
+        "Submit": "Submit"
     },
       "EditParticipant": {
-        "TranslationSections": ""
+        "Username": "Participant username:",
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "Telephone": "Telephone",
+        "SocialMedia": "Social media provider",
+        "SocialMediaAccount": "Social media account",
+        "Email address": "Email address",
+        "Address": "Physical Address",
+        "Update": "Update",
+        "Cancel": "Update"
     },
       "ParticipantProfile": {
-        "TranslationSections": ""
+        "Pronouns": "Pronouns:",
+        "Email":"Email:",
+        "Phone":"Phone number:",
+        "SocialMedia":"Social media:",
+        "Address:":"Address:",
+        "SocialWorkers":"Social workers assigned:",
+        "New":"New case",
+        "AddNote":"Add Note",
+        "AddDocument":"Add Document",
+        "EditSocialWorkers":"Edit Social Workers"
     },
       "ViewParticipants": {
-        "TranslationSections": ""
+        "Sort": "Sort by",
+        "Name": "Name",
+        "Updated": "Updated",
+        "Search": "Search",
+        "Username": "Username",
+        "Pronouns": "Pronouns:",
+        "Email":"Email:",
+        "Phone":"Phone number:",
+        "SocialMedia":"Social media:",
+        "Address:":"Address:",
+        "SocialWorkers":"Social workers assigned:",
+        "View":"View",
+        "Edit":"Edit"
     },
       "PhoneLog": {
         "TranslationSections": ""
