Added placeholder for variables in French dictionary, need to translate the text in the file. #41

--- a/angular-client/src/assets/i18n/fr.json
+++ b/angular-client/src/assets/i18n/fr.json
@@ -1,98 +1,280 @@
 {
     "ActiveCaseFile": {
-        "TranslationSections": "Hello World"
+        "Active": "Active Case Files",
+        "Not Active":  "No active case files to display",
+        "Last": "Last update:",
+        "Priority": "Priority:",
+        "Created": "Created by:",
+        "LastUpdated": "Last updated by:"
     },
      "CaseModal": {
-        "TranslationSections": ""
+        "New": "New Case",
+        "Participant":"Participant:",
+        "Urgency":"Select urgency of request",
+        "Resources":"Select the resources for this case",
+        "Submit":"Submit",
+        "Cancel":"Cancel"
     },
       "CaseFiles": {
-        "TranslationSections": ""
+        "Cases": "Cases",
+        "NoCases":"No cases to display.",
+        "Status":"Status:",
+        "Urgency":"Urgency:",
+        "Type":"Type:",
+        "Notes":"Notes:",
+        "Name":"Name:",
+        "Contacted":"Contacted:",
+        "Date":"Date:",
+        "Comment":"Comment:",
+        "Yes":"Yes:",
+        "No":"No:",
+        "SelectedResource":"Selected Resource:",
+        "Nothing":"Nothing selected",
+        "Clear":"clear",
+        "Save":"save",
+        "Delete":"delete"
     },
       "Activity": {
-        "TranslationSections": ""
+        "Recent": "Recent Case File Activity",
+        "Participant": "Participant:",
+        "Last": "Last update:",
+        "NoRecent":"No recent activity",
+        "RecentPhone":"Recent Phone Log Activity"
     },
       "DashBoard": {
         "TranslationSections": ""
     },
       "DocumentModal": {
-        "TranslationSections": ""
+        "AddDocument": "Add a Document",
+        "Upload": "Upload Document",
+        "Submit": "Submit",
+        "Close": "Close"
     },
       "Documents": {
-        "TranslationSections": ""
+        "Documents": "Documents",
+        "NoDocs": "No documents to display.",
+        "Attachments": "Attachments:",
+        "Delete": "Delete"
     },
       "Login": {
-        "TranslationSections": ""
+        "Login": "Login",
+        "Email": "Email",
+        "Password": "Password",
+        "Submit": "Submit"
     },
-      "messages": {
-        "TranslationSections": ""
+      "Messages": {
+        "Messages": "Messages:",
+        "Clear":"Clear"
     },
       "AlertModal": {
-        "TranslationSections": ""
+        "Ok": "OK"
     },
       "ConfirmModal": {
-        "TranslationSections": ""
+        "Confirmation": "Confirmation",
+        "Ok":"Ok",
+        "Cancel":"Cancel"
     },
       "Notes": {
-        "TranslationSections": ""
+        "Notes": "Notes",
+        "No": "No notes to display.",
+        "Note":"Note:",
+        "Attachment":"Attachment:"
     },
       "NoteModal": {
-        "TranslationSections": ""
+        "Create": "Create a Note",
+        "Upload": "Upload File",
+        "Cancel": "Cancel"
     },
       "Participants": {
-        "TranslationSections": ""
     },
       "AddParticipant": {
-        "TranslationSections": ""
+        "Legal": "Do not use participant's legal name",
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "Telephone": "Telephone",
+        "SocialMedia": "Social media provider (Twitter, Facebook)",
+        "SocialMediaAccount": "Social media account (@username)",
+        "Email address": "Email address",
+        "Warning": "This is already associated to a participant!",
+        "Address": "Physical Address",
+        "Optional": "This is strictly optional",
+        "Submit": "Submit"
     },
       "EditParticipant": {
-        "TranslationSections": ""
+        "Username": "Participant username:",
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "Telephone": "Telephone",
+        "SocialMedia": "Social media provider",
+        "SocialMediaAccount": "Social media account",
+        "Email address": "Email address",
+        "Address": "Physical Address",
+        "Update": "Update",
+        "Cancel": "Update"
     },
       "ParticipantProfile": {
-        "TranslationSections": ""
+        "Pronouns": "Pronouns:",
+        "Email":"Email:",
+        "Phone":"Phone number:",
+        "SocialMedia":"Social media:",
+        "Address:":"Address:",
+        "SocialWorkers":"Social workers assigned:",
+        "New":"New case",
+        "AddNote":"Add Note",
+        "AddDocument":"Add Document",
+        "EditSocialWorkers":"Edit Social Workers"
     },
       "ViewParticipants": {
-        "TranslationSections": ""
+        "Sort": "Sort by",
+        "Name": "Name",
+        "Updated": "Updated",
+        "Search": "Search",
+        "Username": "Username",
+        "Pronouns": "Pronouns:",
+        "Email":"Email:",
+        "Phone":"Phone number:",
+        "SocialMedia":"Social media:",
+        "Address:":"Address:",
+        "SocialWorkers":"Social workers assigned:",
+        "View":"View",
+        "Edit":"Edit"
     },
       "PhoneLog": {
         "TranslationSections": ""
     },
       "AddPhoneLog": {
-        "TranslationSections": ""
+        "Name": "Name of caller",
+        "Pronouns": "Pronouns",
+        "Type":"Type of caller",
+        "Phone": "Phone number",
+        "Reason": "Reason for call",
+        "Urgent": "Urgent",
+        "Message": "Message",
+        "Hint": "Their message, when to call, extension number...",
+        "Log": "Log this call"
     },
       "EditPhoneLog": {
-        "TranslationSections": ""
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "Type":"Type of caller",
+        "Phone": "Phone number",
+        "Language": "Language",
+        "Reason": "Reason for call",
+        "Urgent": "Urgent",
+        "Message": "Message",
+        "Hint": "Their message, when to call, extension number...",
+        "Update": "Message",
+        "Cancel": "Message"
     },
       "ViewPhoneLog": {
-        "TranslationSections": ""
+        "Pending": "Pending Phone Calls",
+        "Everything": "Everything up to date!",
+        "Type":"Type of caller:",
+        "Phone": "Phone number:",
+        "Date": "Date of the call:",
+        "Subject": "Subject",
+        "Urgent": "Urgent",
+        "Message": "Message:",
+        "Note": "Note regarding the call:",
+        "Language":"Language:",
+        "LoggedBy":"Call logged by:",
+        "Resolve":"Resolve",
+        "Edit":"edit",
+        "Completed":"Completed Phone Calls",
+        "Nothing":"Nothing to show",
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "CalledBy": "Called back by:",
+        "DateCalledBack":"Date called back:"
     },
       "Reports": {
-        "TranslationSections": ""
+        "Reports": "Reports",
+        "Nothing": "Nothing to show"
     },"Resources": {
-        "TranslationSections": ""
     },
       "AddResource": {
-        "TranslationSections": ""
+        "Type": "Type",
+        "Rtype": "Resource Type",
+        "Name": "Name",
+        "Email": "Email",
+        "Telephone": "Telephone",
+        "Location": "Location",
+        "Notes": "Notes",
+        "Housing": "Housing",
+        "Term": "Term",
+        "Gender": "Gender",
+        "Constraints": "Constraints",
+        "Medical": "Medical",
+        "Cost": "Cost",
+        "Waitlist": "Waitlist Time",
+        "Schedule": "Schedule",
+        "Submit": "Submit"
     },
       "EditResource": {
-        "TranslationSections": ""
+        "Name": "Name",
+        "Email": "Email",
+        "Telephone": "Telephone",
+        "Term": "Term",
+        "Location": "Location",
+        "Notes": "Notes",
+        "Housing": "Housing",
+        "Gender": "Gender",
+        "Constraints": "Constraints",
+        "Medical": "Medical",
+        "Cost": "Cost",
+        "Waitlist": "Waitlist Time",
+        "Schedule": "Schedule",
+        "Update": "Update",
+        "Cancel": "Cancel"
     },
       "ViewResource": {
-        "TranslationSections": ""
+        "Location": "Location",
+        "Telephone": "Telephone",
+        "Email": "Email",
+        "Term": "Term",
+        "Gender": "Gender",
+        "Constraints": "Constraints",
+        "Free": "Free",
+        "Approx":"Approximate Waitlist:",
+        "Schedule": "Schedule",
+        "Notes": "Notes"
     },
       "Tasks": {
-        "TranslationSections": ""
+        "Tasks": "Tasks",
+        "Completed":"Completed",
+        "Add":"Add task"
     },
       "TrashBin": {
-        "TranslationSections": ""
+        "TrashBin": "Trash Bin",
+        "Nothing": "Nothing in the trash bin"
     },
       "AssignUsersModal": {
-        "TranslationSections": ""
+        "Edit": "Edit Assigned Social Workers",
+        "Remove":"Remove",
+        "AddSW":"Add Social Worker",
+        "Add":"Add",
+        "Ok":"Ok"
     },
       "RegisterUser": {
-        "TranslationSections": ""
+        "Regiser": "Register a User",
+        "Name": "Name",
+        "Pronouns": "Pronouns",
+        "Email": "Email",
+        "Password": "Password",
+        "Confirm": "Confirm password",
+        "Fail": "Passwords do not match",
+        "Admin": "Administrator",
+        "Regular": "Regular User",
+        "Submit":"Submit"
+
     },
       "ViewUsers": {
-        "TranslationSections": ""
+        "Sort": "Sort by",
+        "Name": "Name",
+        "Updated": "Updated",
+        "Email": "Email",
+        "Role": "Role:",
+        "Pronouns": "Pronouns"
     },
       "Users": {
         "TranslationSections": ""
