Added select toggle to switch languages. Successfully changes languages now. #41

--- a/angular-client/src/assets/i18n/fr.json
+++ b/angular-client/src/assets/i18n/fr.json
@@ -57,7 +57,7 @@
         "Delete": "Delete"
     },
       "Login": {
-        "Login": "Login",
+        "Login": "testing",
         "Email": "Email",
         "Password": "Password",
         "Submit": "Submit"
